package br.pucminas.aluguelDeCarros.model;


public enum TipoAgente {

    BANCO, EMPRESA
    
}
