@startuml
skinparam classAttributeIconSize 0

Usuario <|.. Agente
Usuario <|.. Pedido : contém
Pedido "1" *-- "1" Contrato : contém
Contrato "1" <-- "1" ContratoFinanceiro 
Pedido "1" -- "1" Cliente : contém
Pedido "1" o-- "1" Automovel : contém
Pedido "*" o-- "1" Agente : contém
Cliente "*" --o "3" Empregador : emprega
TipoAgente <|-- Agente

interface Usuario {
    -id : Long
    -login: String
    -senha: String
    +login() : void
    +logout() : void
    +registrar() : Boolean
}

class Cliente {
    -rg : String
    -cpf : String
    -nome : String
    -endereco : String
    -profissao : String
    -empregador : String
    -rendimentos : String
    +solicitarPedido() : void
    +editarPedidoPedido() : void
    +visualizarPedidoPedido() : Pedido
    +excluirPedidoPedido() : void
}

class Agente {
    -cnpj : String
    -tipo : TipoAgente
    +analisarPedidoPedido() : Boolean
    +modificarPedidoPedido() : Boolean
}

enum TipoAgente{
    BANCO,
    EMPRESA
}

class Empregador {
    -id: Long
    -nome : String
    -cpnj : String
}

class Pedido {
    -id : Long
    -aprovado : Boolean
    -agente : Agente
    -cliente : Cliente
    -automovel : Automovel
    -contrato : ContratoFinanceiro
}

class Automovel {
    -id : Long
    -matricula : String
    -ano : String
    -marca : String
    -modelo : String
    -placa : String
    -proprietario : User
}

class Contrato {
    -id: Long
    -duracao: Integer
}

class ContratoFinanceiro {
    -clienteCompraVeiculo: Boolean
}
@enduml